[UPD] - api url example

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 VITE_API_URL=http://localhost:3000
 
 # Production: Use your deployed API URL
-# VITE_API_URL=https://your-api-url.onrender.com
+# VITE_API_URL=https://your-api-url.com
 
 # Notes:
 # - Do NOT include trailing slash (/)
